fixed alignment issue of post title & meta details.

--- a/assets/css/ui/_posts.scss
+++ b/assets/css/ui/_posts.scss
@@ -12,16 +12,9 @@
     color: $color-soft;
     font-size: $text-small;
     margin-bottom: $base-spacing-unit;
-    padding: 0 $base-spacing-unit;
+    padding: 0 4%;
 }
 
-/**
- * 1.   Due to the post title being a larger font, spacing with ems causes the
- *      title to not line up with the content & meta details.
- * 2.   Support for rem is very good but some (<= IE 8, Opera mini).
- *      Source: http://caniuse.com/rem
- */
 .post-title {
-    padding: 0 $base-spacing-unit-px; /* 2 */
-    padding: 0 $base-spacing-unit-rem; /* 1 */
+    padding: 0 4%;
 }
